# Flow

./: .build-e2e-state.json  .cursorrules  .env.example  .gitignore  CHANGELOG.md  README.md  go.mod  go.sum  go.work  project.json
back-end/: .cursorrules  (+5 more)
back-end/event/: Cargo.toml
back-end/event/src/: downstream.rs  lib.rs  store.rs  types.rs
back-end/event/tests/: concurrency.rs  downstream.rs  integration.rs  property.rs  store.rs  types.rs
back-end/event/tests/fixtures/: mod.rs
back-end/node/: Cargo.toml
back-end/node/src/: lib.rs  main.rs  runner.rs
back-end/node/src/api/: .cursorrules  mod.rs  node.rs
back-end/node/src/api/dto/: mod.rs
back-end/node/src/api/servers/: jwt_middleware.rs  mod.rs  rest.rs  websocket.rs
back-end/node/src/api/servers/rest/: auth.rs  content.rs  health.rs  mod.rs  network.rs  search.rs  spaces.rs
back-end/node/src/bootstrap/: config.rs  init.rs
back-end/node/src/modules/: mod.rs  space.rs
back-end/node/src/modules/ai/: api.rs  config.rs  metrics.rs  mod.rs  pipeline.rs  pipeline_manager.rs  remote_indexer.rs  smart_chunker.rs
back-end/node/src/modules/ai/index/: config.rs  metrics.rs
back-end/node/src/modules/ai_pipeline/: mod.rs
back-end/node/src/modules/ai_pipeline/chunker/: chunker.rs  mod.rs
back-end/node/src/modules/ai_pipeline/index/: config.rs  metrics.rs  mod.rs  pipeline.rs
back-end/node/src/modules/kg/: mod.rs
back-end/node/src/modules/kg/chunker/: config.rs  content_detection.rs  mod.rs  semantic_chunker.rs  sentence_aware_chunker.rs  token_chunker.rs  types.rs
back-end/node/src/modules/kg/index/: pipeline.rs
back-end/node/src/modules/knowledge/: edge.rs  entity.rs  extraction.rs  kg_transformer.rs  mod.rs  types.rs  vector.rs
back-end/node/src/modules/network/: .cursorrules  behaviour.rs  config.rs  keypair.rs  manager.rs  mod.rs  peer_registry.rs  persistent_peer_registry.rs  persistent_provider_registry.rs
back-end/node/src/modules/query/: federated_search.rs  mod.rs  rag.rs  search.rs
back-end/node/src/modules/ssi/: jwt.rs  mod.rs
back-end/node/src/modules/storage/: kv.rs  mod.rs
back-end/node/src/utils/: env.rs  mod.rs
back-end/node/tests/: .cursorrules  mod.rs
back-end/node/tests/api/rest/: content.rs  distributed_search.rs  health.rs  indexing_e2e.rs  mod.rs  network.rs  space.rs
back-end/node/tests/api/websocket/: mod.rs
back-end/node/tests/bootstrap/: config.rs  init.rs
back-end/node/tests/modules/: mod.rs
back-end/node/tests/modules/ai/: indexing.rs
back-end/node/tests/modules/network/: bootstrap.rs  config.rs  connection_limits.rs  content_announcement.rs  dht_provider.rs  gossipsub.rs  integration.rs  manager.rs  mdns.rs  mod.rs  nat.rs  performance.rs  persistent_peer_registry.rs  provider_lifecycle.rs
back-end/node/tests/modules/ssi/: auth.rs  did.rs  did_resolver.rs
back-end/node/tests/modules/storage/: kv.rs  mod.rs
(+261 files in other folders)
