[package]
name = "event"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
jsonschema = "0.33.0"
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf", "lz4", "snappy"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10.9"
thiserror.workspace = true
tracing = "0.1.41"
ulid = { version = "1.2.1", features = ["serde"] }

[dev-dependencies]
tracing-subscriber = "0.3.20"
tempfile = "3.23.0"
proptest = "1.8.0"
tokio.workspace = true
serial_test = "3.2.0"
