[package]
name = "node"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["clock", "serde"] }
directories = "6.0.0"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
env_logger = "0.11.8"
multibase = "0.9.1"
rand = "0.8"
sha2 = "0.10.9"
tempfile = "3.20.0"

sea-orm = { workspace = true }
serde.workspace = true
serde_json = { workspace = true }
tokio = { workspace = true }

entity = { path = "../entity" }
event = { path = "../event" }
errors = { path = "../errors" }
migration = { path = "../migration" }
webauthn-rs = "0.5.2"
sled = "0.34.7"
once_cell = "1.21.3"
axum = { version = "0.8.6", features = ["ws"] }
futures-util = "0.3.31"
tower-http = { version = "0.6.6", features = ["cors"] }
tower = "0.5.2"
base64 = "0.22.1"
ssi = "0.12.0"
serde_cbor = "0.11.2"
fs4 = { version = "0.13.1", features = ["async-std", "tokio"] }
serial_test = "3.2.0"
webauthn-authenticator-rs = { version = "0.5.2", features = ["softpasskey"] }
http-body-util = "0.1.3"
async-trait = "0.1.89"
urlencoding = "2.1.3"
url = "2.5.7"
thiserror.workspace = true
percent-encoding = "2.3.2"
ctor = "0.6.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokenizers = { version = "0.22.1", features = ["http"] }
tiktoken-rs = "0.7.0"
unicode-segmentation = "1.12.0"
regex = "1.12.2"
lingua = "1.7.2"
whatlang = "0.18.0"
anyhow = "1.0.100"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.3"
text-splitter = { version = "0.28.0", features = ["markdown"] }
swiftide = { version = "=0.31.0", features = ["all"] }
swiftide-integrations = "=0.31.0"
num_cpus = "1.17.0"
libp2p = { version = "0.56.0", features = ["kad", "quic", "noise", "yamux", "tcp", "dns", "macros", "tls", "tokio", "mdns", "gossipsub", "request-response"] }
futures = "0.3.31"
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf", "lz4", "snappy"] }
web-time = "1.1.0"
hex = "0.4.3"
cid = "0.11.1"
multihash = "0.19.3"
serde_ipld_dagcbor = "0.6.4"
fastcdc = "3.2.1"
serde_bytes = "0.11.19"

[dev-dependencies]
proptest = "1.9.0"
reqwest = "0.12.24"
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"

